# sti-hpc

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
data/: hospital.json  model.props  patients  three_chairs.hospital
docs/: pathfinding.ipynb
docs/file_formats/: patient_distribution.md  plan_file.md
include/: agent_creator.hpp  agente.h  clock.hpp  contagious_agent.hpp  entry.hpp  infection_logic.hpp  model.hpp  modelo.h  parallel_agent.hpp  parallel_agent_package.hpp  plano.h
include/infection_logic/: human_infection_cycle.hpp  infection_cycle.hpp  infection_factory.hpp  object_infection_cycle.hpp
include/plan/: plan.hpp  plan_file.hpp  plan_tile.hpp
lib/: Makefile.debug.repast  Makefile.release.repast  Makefile.repast  get.py  install.py  versions.json
src/: agent_creator.hpp  agent_factory.cpp  agent_factory.hpp  agent_package.hpp  agente.cpp  chair_manager.cpp  chair_manager.hpp  clock.cpp  clock.hpp  contagious_agent.hpp  coordinates.hpp  debug_flags.hpp  doctors.hpp  doctors_queue.hpp  entry.cpp  entry.hpp  exit.cpp  exit.hpp  hospital_plan.cpp  hospital_plan.hpp  icu.hpp  infection_logic.hpp  json_loader.hpp  json_serialization.hpp  main.cpp  metric.hpp  model.cpp  model.hpp  modelo.cpp  mp_queue.hpp  object.cpp  object.hpp  pathfinder.cpp  pathfinder.hpp  patient.cpp  patient.hpp  patient_fsm.cpp  patient_fsm.hpp  person.cpp  person.hpp  (+13 more)
src/doctors/: doctors.cpp  doctors_queue.cpp  proxy_doctors.cpp  proxy_doctors.hpp  real_doctors.cpp  real_doctors.hpp
src/icu/: icu.cpp  icu_admission.hpp  proxy_icu.cpp  proxy_icu.hpp  real_icu.cpp  real_icu.hpp
src/infection_logic/: environment.hpp  ghost_object_cycle.cpp  ghost_object_cycle.hpp  human_infection_cycle.cpp  human_infection_cycle.hpp  icu_environment.cpp  icu_environment.hpp  infection_cycle.hpp  infection_factory.cpp  infection_factory.hpp  object_infection.cpp  object_infection.hpp  object_infection_cycle.cpp  object_infection_cycle.hpp
src/mp_queue/: proxy_mp_queue.hpp  real_mp_queue.hpp
src/plan/: plan.hpp  plan_file.hpp
src/queue_manager/: proxy_queue_manager.cpp  proxy_queue_manager.hpp  real_queue_manager.cpp  real_queue_manager.hpp
test/: CMakeLists.txt  pathfinding.cpp
test/agent/: serialization.cpp
test/plan/: plan_generator.py  plan_test.cpp
test/queue/: queue.cpp
test/time/: time.cpp
utils/: admission_reference.csv  analyze.py  benchmark.py  builder.old.py  builder.py  calibration.py  calibrator.py  day_distribution_reference.csv  demo.py  hospital_macallini.ipynb  libbenchmark.py  perf_chart.py  performance.py  plan.py  plot_calibration.py  plot_validation.py  postprocess.py  process.py  ref.csv  runner.py  simulation.py  validator.py
