enable_testing()

# This is outedated
# add_executable(plan_test_bin plan/plan_test.cpp)
# configure_file(plan/plan_generator.py ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
# target_include_directories(plan_test_bin SYSTEM PRIVATE "${PROJECT_SOURCE_DIR}/src/")
# target_compile_options(plan_test_bin PRIVATE -Wall -Wextra -Wnarrowing -Wconversion -Wpedantic)
# tidy(plan_test_bin)
# add_test(NAME plan_test COMMAND plan_test_bin)

# This is outdated
# add_executable(serialization_test_bin agent/serialization.cpp)
# target_include_directories(serialization_test_bin SYSTEM PRIVATE "${PROJECT_SOURCE_DIR}/src/")
# target_link_directories(serialization_test_bin PRIVATE "${LIB_ROOT_PATH}/boost/lib")
# target_include_directories(serialization_test_bin SYSTEM PUBLIC ${LIB_ROOT_PATH}/boost/include/)
# target_link_libraries(serialization_test_bin PUBLIC boost_system-mt-x64 boost_filesystem-mt-x64 boost_serialization-mt-x64 boost_mpi-mt-x64)
# target_link_directories(serialization_test_bin PRIVATE "${LIB_ROOT_PATH}/mpich/lib")
# target_include_directories(serialization_test_bin SYSTEM PUBLIC ${LIB_ROOT_PATH}/mpich/include/)
# target_link_libraries(serialization_test_bin PUBLIC mpi)
# target_link_directories(serialization_test_bin PRIVATE "${LIB_ROOT_PATH}/lib")
# target_include_directories(serialization_test_bin SYSTEM PUBLIC ${LIB_ROOT_PATH}/include/)
# target_link_libraries(serialization_test_bin PUBLIC repast_hpc-2.3.1 relogo-2.3.1)
# target_compile_options(serialization_test_bin PRIVATE -Wall -Wextra -Wnarrowing -Wconversion -Wpedantic)
# tidy(serialization_test_bin)
# add_test(NAME serialization_test COMMAND serialization_test_bin)

add_executable(time_test_bin time/time.cpp)
target_include_directories(time_test_bin SYSTEM PRIVATE "${PROJECT_SOURCE_DIR}/src/")
target_compile_options(time_test_bin PRIVATE -Wall -Wextra -Wnarrowing -Wconversion -Wpedantic)
tidy(time_test_bin)
add_test(NAME time_test COMMAND time_test_bin)
